Created Character Modal

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+  background: linear-gradient(180deg, #b5d44f 0%, #388d46 100%);
+  font-family: "VictorMono", monospace, "system-ui", sans-serif;
+}
