--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import "../public/colors.scss";
 
 body {
-  background: linear-gradient(180deg, #b5d44f 0%, #388d46 100%);
+  background: linear-gradient(180deg, $secondary 0%, $primary 100%);
   font-family: "VictorMono", monospace, "system-ui", sans-serif;
+  color: $primary;
 }
