--- a/src/app/components/pagination/pagination.component.scss
+++ b/src/app/components/pagination/pagination.component.scss
@@ -1,3 +1,5 @@
+@import "../../../../public/colors.scss";
+
 .pagination{
   margin-bottom: 1rem;
   display: flex;
@@ -12,18 +14,17 @@
 p{
   font-size: 1.3rem;
   border-radius: 60px;
-  color: #2b6c7a;
-  box-shadow: 0 0 5px #2b6c7a;
+  box-shadow: 0 0 5px $primary;
 }
 button{
   font-family: "VictorMono",monospace,"system-ui",sans-serif;
-  box-shadow: 0 0 3px #2b6c7a;
+  box-shadow: 0 0 3px $primary;
   font-size: 1rem;
-  background-color: #388d46;
-  color: #f7f5ba;
+  background-color: $primary;
+  color: white;
   padding: .3rem 1rem;
   min-width: 6rem;
-  border: 2px solid #2b6c7a;
+  border: 2px solid $primary;
   border-radius: 60px;
   &:disabled{
     background-color: #5d5d5d;
@@ -32,8 +33,8 @@ button{
     cursor: pointer;
   }
   &:hover:enabled{
-    background-color: #b5d44f;
-    color: #2b6c7a;
+    background-color: $secondary;
+    color: $primary;
     transition: 500ms;
   }
 
