--- a/public/colors.scss
+++ b/public/colors.scss
@@ -1,6 +1,8 @@
 $primary : #2b6c7a;
-$secondary: #b1cfd3;
-//$accent-1: #e78925;
+$secondary: #a6cccc;
+$background: #ebe480;
+$background-contrast: #ebe480;
+
 //$accent-1-contrast: #fbbb9a;
 //$accent-2: #0da8be;
 //$background: #5d9d4d;
