--- a/src/app/components/card-character/card-character.component.scss
+++ b/src/app/components/card-character/card-character.component.scss
@@ -13,7 +13,7 @@ span{
 }
 
 .card{
-  background: $secondary;
+  background: $background;
   box-shadow: 0 0 4px 1px #5d5d5d;
   border-radius: 5px;
   padding: .4rem;
