--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,6 @@ body {
   background-color: $secondary;
   color: $primary;
 }
+button {
+  font-family: "VictorMono",monospace,"system-ui",sans-serif;
+}
