Add Font RickandMorty

--- a/public/colors.scss
+++ b/public/colors.scss
@@ -3,8 +3,9 @@ $secondary: #a6cccc;
 $background: #ebe480;
 $background-contrast: #ebe480;
 
-//$accent-1-contrast: #fbbb9a;
-//$accent-2: #0da8be;
+$letter: #42B4CA;
+$letter-contrast: #C0DF40;
+
 //$background: #5d9d4d;
 //$background-contrast: #388d46
 
