--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,5 +1,6 @@
 <header>
-  <h1>Characters Rick & Morty</h1>
+  <h1>Rick and Morty</h1>
+  <h1>Characters</h1>
 </header>
 <app-pagination marginNumber="2rem" withNumber="5rem"
                 (numberOutputEmitter)="makeApiCallCharacters($event)"
