--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -1,7 +1,16 @@
 header{
   text-align: center;
   margin: 2rem;
-  font-size: 1.5rem;
+  h1{
+    font-size: 5rem;
+  }
+  :last-child{
+    font-size: 2.5rem;
+  }
+}
+h1{
+  margin: 0;
+
 }
 
 .placeholder{
